Fix for the 'y' in the nav bar title being clipped (#1132)

--- a/components/app-core/frontend/src/view/navbar/navbar.scss
+++ b/components/app-core/frontend/src/view/navbar/navbar.scss
@@ -325,6 +325,7 @@ nav.secondary-nav {
     float: none;
     white-space: nowrap;
     height: auto;
+    line-height: inherit;
   }
 }
 
